--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.2",
+    "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "uuid": "^9.0.0"
